added integration testingto the maintenance ticket service, fix bug according to simple CRUD test scenario